--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+      name="description"
+      content="James Bond movie music"
+    />
     <link rel='shortcut icon' type='image/x-icon' href='/images/favicon.ico' />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
     <title>James Bond Music</title>
 </head>
 <body>
-    <header><img src="./images/007.png" alt=""></header>
+    <header><img src="./images/007.png" alt="007 James Bond"></header>
 
     <div class="music-container">
         <div class="music-info">
